--- a/css/main.css
+++ b/css/main.css
@@ -6,12 +6,20 @@ h1 {
   color: gold;
   font-size: 50px;
   margin-bottom: -2px;
-  margin-top: -2px;
+  margin-top: 10px;
 }
 
-body {
-  background: wheat;
+body, .bg {
   box-sizing: border-box;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  position: absolute;
+}
+
+.bg {
+  background: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%),
+                radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
 }
 
 .grid {
@@ -29,6 +37,7 @@ body {
   margin: -1px 0;
   width: 20px;
   height: 20px;
+  border-radius: 2px;
 }
 
 .block {
