--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@ body, .grid-container {
   width: 100%;
   margin: 0;
   position: absolute;
+  color: #111111;
 }
 
 .grid-container {
@@ -22,7 +23,7 @@ h1, h2 {
   text-align: center;
   font-family: "Pinyon Script", cursive;
   color: gold;
-  text-shadow: 2px 2px 5px grey;
+  text-shadow: 2px 2px 5px #333333;
 }
 
 h1 {
@@ -40,19 +41,20 @@ h2 {
 .grid, .controls, .score {
   border: 7px groove gold;
   vertical-align: top;
-  box-shadow: 2px 2px 5px grey;
+  box-shadow: 2px 2px 5px #333333;
 }
 
 .score {
   width: 300px;
   float: right;
   margin-right: 110px;
+  height: 180px;
 }
 
 .score p {
   text-align: center;
   font-size: 50px;
-  padding: 0 0 10px 0;
+  padding: 20px 0 10px 0;
   margin: 0;
   font-family: "Orbitron";
 }
@@ -70,7 +72,84 @@ h2 {
   float: left;
   margin-left: 40px;
   padding-right: 5px;
-  color: #111111;
+  height: 180px;
+}
+
+.dropdown {
+   -webkit-border-radius: 10px;
+   -moz-border-radius: 10px;
+   border-radius: 10px;
+   width: 50px;
+   height: 50px;
+   font-size: 20px;
+   padding-left: 5px;
+   background-color: rgb(253,200,134);
+}
+
+.btn {
+  display: inline-block;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  height: 100px;
+  width: 200px;
+  position: relative;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  padding: 10px 20px;
+  border: 0 none rgb(177,106,2);
+  border-bottom: 4px solid rgb(177,106,2);
+  -webkit-border-radius: 7px 7px 9px 9px;
+  border-radius: 7px 7px 9px 9px;
+  font: normal normal bold 24px/40px "Averia Sans Libre", Helvetica, sans-serif;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  text-transform: uppercase;
+  -o-text-overflow: clip;
+  text-overflow: clip;
+  white-space: nowrap;
+  background: -webkit-linear-gradient(-90deg, rgb(253,218,134) 0, rgb(225,157,60) 100%), rgb(253, 218, 134);
+  background: -moz-linear-gradient(180deg, rgb(253,218,134) 0, rgb(225,157,60) 100%), rgb(253, 218, 134);
+  background: linear-gradient(180deg, rgb(253,218,134) 0, rgb(225,157,60) 100%), rgb(253, 218, 134);
+  -webkit-background-origin: padding-box;
+  background-origin: padding-box;
+  -webkit-background-clip: border-box;
+  background-clip: border-box;
+  -webkit-background-size: auto auto;
+  background-size: auto auto;
+  -webkit-box-shadow: 0 -1px 1px 0 rgba(255,255,255,0.701961) inset, 0 1px 1px 0 rgb(177,106,2) ;
+  box-shadow: 0 -1px 1px 0 rgba(255,255,255,0.701961) inset, 0 1px 1px 0 rgb(177,106,2) ;
+  text-shadow: 0 1px 1px rgba(0,0,0,0.498039) ;
+}
+
+.btn:hover {
+  background: rgb(225, 157, 60);
+  -webkit-transition: all 100ms cubic-bezier(0.42, 0, 0.58, 1);
+  -moz-transition: all 100ms cubic-bezier(0.42, 0, 0.58, 1);
+  -o-transition: all 100ms cubic-bezier(0.42, 0, 0.58, 1);
+  transition: all 100ms cubic-bezier(0.42, 0, 0.58, 1);
+}
+
+.btn:active {
+  height: 94px;
+  margin: 4px 0 0;
+  border: none;
+  -webkit-border-radius: 7px;
+  border-radius: 7px;
+  background: -webkit-linear-gradient(-90deg, rgb(253,218,134) 0, rgb(225,157,60) 100%), rgb(253, 218, 134);
+  background: -moz-linear-gradient(180deg, rgb(253,218,134) 0, rgb(225,157,60) 100%), rgb(253, 218, 134);
+  background: linear-gradient(180deg, rgb(253,218,134) 0, rgb(225,157,60) 100%), rgb(253, 218, 134);
+  -webkit-background-origin: padding-box;
+  background-origin: padding-box;
+  -webkit-background-clip: border-box;
+  background-clip: border-box;
+  -webkit-background-size: auto auto;
+  background-size: auto auto;
+  -webkit-transition: all 30ms cubic-bezier(0.42, 0, 0.58, 1);
+  -moz-transition: all 30ms cubic-bezier(0.42, 0, 0.58, 1);
+  -o-transition: all 30ms cubic-bezier(0.42, 0, 0.58, 1);
+  transition: all 30ms cubic-bezier(0.42, 0, 0.58, 1);
 }
 
 .cell {
